# Lab_1

./: CMakeLists.txt  Errors.h  LisIf_1.0-1_all.deb  LisIf_1.0-2a_any.deb  LisIf_1.0-2b_any.deb  Makefile  Pstat.c  README.md  main.c
LW1/: Errors.c  Pstat.h
LW_mon/: CMakeLists.txt  main.c
LisIf_1.0-2a_any/DEBIAN/: control
LisIf_1.0-2b_any/: lisif_1.0-2a_any.deb
LisIf_1.0-2b_any/DEBIAN/: control
LisIf_Sources/LisIf/: CMakeLists.txt  Errors.c  main.c
LisIf_Sources/LisIf_1.0-2a/LisIf/: main.c
LisIf_Sources/LisIf_1.0-2a/LisIf_mon/: CMakeLists.txt  main.c
LisIf_Sources/LisIf_1.0-2b/: Bilding.sh
LisIf_Sources/LisIf_1.0-2b/LisIf/: CMakeLists.txt  Errors.c  Errors.h  main.c
LisIf_Sources/LisIf_mon/: main.c
debian/: changelog  control  copyright  rules
src/packet-filter/: errors.c  errors.h  packet-filter-a.c  packet-filter-b.c  packet_filter_a.c  packet_filter_b.c  safe_functions.c  safe_functions.h
src/statistics-printer/: main.c
